# powerline-rust

./: .gitignore  .mergify.yml  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: build-and-test.yml  cd.yml  pull_requests.yml  rust-build-multiarch-and-publish.yml
benches/: cli.rs
examples/: minimalistic.rs  powerline-fixed.rs
src/: lib.rs  powerline.rs  terminal.rs  theme.rs
src/modules/: cmd.rs  cwd.rs  exec_time.rs  exit_code.rs  fish.rs  git.rs  host.rs  mod.rs  new_line.rs  pyvenv.rs  readonly.rs  time.rs  user.rs
src/modules/git/: libgit.rs  process.rs
